--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -6,8 +6,7 @@
 @import "./variables.scss";
 @import "../css/animate.css";
 
-
-.btn{
+.btnn{
     border: 0;
     cursor: pointer;
     font-size: 14px;
