--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -42,6 +42,14 @@
                 height: 100%;
             }
         }
+        &.rtl{
+            .modal-dialog{
+                margin-left: 0;
+                margin-right: auto;
+                .modal-content{
+                }
+            }
+        }
     }
 }
 .default-bg-color{
@@ -60,5 +68,8 @@
     g{
         fill: #FFFFFF;
     }
+}
+.visibility_hidden{
+    visibility: hidden;
 }
 
