--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -72,4 +72,33 @@
 .visibility_hidden{
     visibility: hidden;
 }
+input[type="text"]:not(.select__input){
+    background: #f7f7f7;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    height: 38px;
+    padding: 2px 8px;
+    width: 100%;
+    &:focus{
+        outline-color: #1fa1cf;
+    }
+}
+label{
+    padding: 0px 2px;
+    width: 100%;
+}
+
+textarea{
+    background: rgb(247, 247, 247);
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 4px;
+    height: 49px;
+    padding: 2px 8px;
+    width: 100%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    &:focus{
+        outline-color: #1fa1cf;
+    }
+}
 
