--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -72,7 +72,7 @@
 .visibility_hidden{
     visibility: hidden;
 }
-input[type="text"]:not(.select__input){
+input[type="password"], input[type="text"]:not(.select__input){
     background: #f7f7f7;
     border: 1px solid #cccccc;
     border-radius: 4px;
