--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -52,6 +52,23 @@
         }
     }
 }
+.custom_scroll_bar{
+    overflow-y: auto;
+    &::-webkit-scrollbar-track{
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            background-color: #F5F5F5;
+            border-radius:9px;
+    }
+    &::-webkit-scrollbar{
+        width: 8px;
+        background-color: #F5F5F5;
+        border-radius:9px;
+    }
+    &::-webkit-scrollbar-thumb{
+        border-radius:9px;
+        background-color: $default_color;
+    }
+}
 .default-bg-color{
     background-color: $default_color;
 }
@@ -72,7 +89,7 @@
 .visibility_hidden{
     visibility: hidden;
 }
-input[type="password"], input[type="text"]:not(.select__input){
+input[type="password"], input[type="tel"], input[type="text"]:not(.select__input){
     background: #f7f7f7;
     border: 1px solid #cccccc;
     border-radius: 4px;
