begin terms of service

--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -51,6 +51,27 @@
             }
         }
     }
+    &.terms_of_service{
+        .modal-dialog{
+            height: 100%;
+            margin-bottom: 0;
+            margin-top: 0;
+            max-width: unset;
+            min-width: 500px;
+            width: 50%;
+            .modal-content{
+                border: 0;
+                border-radius: 0;
+                height: 100%;
+            }
+        }
+        &.rtl{
+            .modal-dialog{
+                .modal-content{
+                }
+            }
+        }
+    }
 }
 .custom_scroll_bar{
     overflow-y: auto;
