add data use policy

--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -44,6 +44,7 @@
                 border: 0;
                 border-radius: 0;
                 height: 100%;
+                padding: 10px 0;
             }
         }
         &.rtl{
@@ -70,6 +71,7 @@
                 border: 0;
                 border-radius: 15px;
                 height: 100%;
+                padding: 10px 0;
             }
         }
         &.rtl{
