order css props

--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -10,7 +10,7 @@
 .backdrop_custom_z_index_1055{
     z-index: 1055 !important;
 }
-.btnn{
+.btn{
     border: 0;
     cursor: pointer;
     font-size: 14px;
