--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -130,6 +130,8 @@
 }
 .custom_scroll_bar{
     overflow-y: auto;
+    scrollbar-color: $default_color #F5F5F5;
+    scrollbar-width: thin;
     &::-webkit-scrollbar-track{
             -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
             background-color: #F5F5F5;
