--- a/healthkools/src/assets/sass/global.scss
+++ b/healthkools/src/assets/sass/global.scss
@@ -85,6 +85,11 @@
             max-width: unset;
             min-width: 550px;
             width: 40%;
+            @media(max-width: 767px){
+                margin-left: 0;
+                max-width: 100%;
+                min-width: 100%;
+            }
             .modal-content{
                 border: 0;
                 border-radius: 0;
